# SimpleMergeTree

./: .gitignore  README.md  run.sh  run_all.sh
code/src/: Arc.h  Augmentation.h  Boundary.h  CMakeLists.txt  DataManager.h  Log.h  RawManager.h  SweepQueue.h  TreeConstructor.cpp  TreeConstructor.h  Value.h  main.cpp
